--- a/style.CSS
+++ b/style.CSS
@@ -1,17 +1,28 @@
-ul{
-    list-style-type: none;
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
     margin: 0;
-    margin: 10px;
-    display: flex;
-    justify-content: flex-end;
+    padding: 0;
+  }
+  
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
     background-color: #333;
-}
-li a{
-    color: aliceblue;
- 
-}
-li{
-    color: gray;
-    font-size: 20px;
+  }
+  
+  nav li {
+    display: inline-block;
     padding: 10px;
-}
+  }
+  
+  nav a {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  .container {
+    text-align: center;
+    margin-top: 50px;
+  }
